force-app/main/default/objects/CaseWidget_CaseType__c/CaseWidget_CaseType__c.object-meta.xml
<CustomObject>
    <label>Case Widget Case Type</label>
    <nameField>
        <label>Case Widget Case Type Name</label>
        <type>AutoNumber</type>
        <displayFormat>CWCT-{0000}</displayFormat>
    </nameField>
    <pluralLabel>Case Widget Case Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>