force-app/main/default/objects/CaseWidget_CaseType__c/fields/Domain__c.field-meta.xml
<CustomField>
    <fullName>Domain__c</fullName>
    <label>Domain</label>
    <referenceTo>CaseWidget_Domain__c</referenceTo>
    <relationshipLabel>Case Types</relationshipLabel>
    <relationshipName>CaseTypes</relationshipName>
    <deleteConstraint>Restrict</deleteConstraint>
    <required>true</required>
    <type>Lookup</type>
</CustomField>